Qt4: update check preference shown when !UPDATE_CHECK
Qt4 simple preferences show the update settings even if the update check is not built-in. That can't work.
Qt4 simple preferences show the update settings even if the update check is not built-in. That can't work.
added Component::Interface: Qt Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
added Status::fixed label
changed milestone to %2.0.2
closed
VideoLAN code repository instance