Qt: hide update check preference when !UPDATE_CHECK

Close #6813